# dengine-shadows

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  dengine.natvis  imgui.ini  imgui_bkc.ini
data/Models/: House.glb  building1.mtl  buildingBase.glb  buildingLarge.glb  buildingSmall.glb  hut.mtl
data/Shaders/: depthVert.glsl  layeredShadowMapDisplayFrag.glsl  phongFrag - kopie (2).glsl  phongFrag.glsl  phongVert.glsl  pssmGeo.glsl  pssmInstancingGeo.glsl  pssmInstancingVert.glsl  shadowFrag.glsl  shadowVert.glsl
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
libs/imguizmo/: CMakeLists.txt
src/: main.cpp
src/Viewport/: Manipulators.cpp  Manipulators.h  SelectStencil.cpp  SelectStencil.h  SimpleViewport.cpp  SimpleViewport.h  Viewport.cpp  Viewport.h
src/Viewport/data/: DisplayOptions.cpp  DisplayOptions.h  HighlightOptions.cpp  RenderOptions.cpp  RenderOptions.h
src/Viewport/scene/: Scene.cpp  Scene.h  SceneRenderTarget.cpp  SceneRenderTarget.h
src/Viewport/scene/scenes/: MainScene.cpp  MainScene.h  PreviewScene.cpp  PreviewScene.h
src/Viewport/shader/: BoxBlurShader.cpp  BoxBlurShader.h  ColorShader.cpp  ColorShader.h  GridShader.cpp  GridShader.h  ObjectShader.cpp  ObjectShader.h  PhongShader.cpp  PhongShader.h  ScreenOverlayShader.cpp  ScreenOverlayShader.h  SelectionCompositeShader.cpp  SelectionCompositeShader.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  WBOITCompositeShader.cpp  WBOITCompositeShader.h  WorldShader.cpp  WorldShader.h
src/app/: SimpleApplication.cpp  SimpleApplication.h
src/app/scenes/: MainScene.cpp  MainScene.h
src/dengine/camera/: AbstractCamera.cpp  AbstractCamera.h  AbstractOrbitCamera.cpp  AbstractOrbitCamera.h  Frustum.cpp  Frustum.h  OrbitCamera.cpp  OrbitCamera.h
src/dengine/component/: BasicComponents.cpp  BasicComponents.h  Entity.cpp  Entity.h
src/dengine/data/: DisplayOptions.cpp  DisplayOptions.h  HighlightOptions.h  RenderOptions.cpp  RenderOptions.h
src/dengine/entity/: ColoredObject.cpp  ColoredObject.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  TexturedObject.cpp  TexturedObject.h
src/dengine/framebuffer/: ColorAttachment.cpp  ColorAttachment.h  DepthAttachment.cpp  DepthAttachment.h  Framebuffer.cpp  Framebuffer.h
src/dengine/lights/: Light.h  Lighting.cpp  Lighting.h  PointLight.cpp  PointLight.h  ShadowCastingLight.cpp  ShadowCastingLight.h  ShadowMap.cpp  ShadowMap.h  ShadowSunLight.cpp  ShadowSunLight.h  SpotLight.cpp  SpotLight.h  SunLight.cpp  SunLight.h
src/dengine/platform/: Application.cpp  Application.h  Common.h  CommonGL.h  CommonImGui.h  Config.h  DGL.h  Logger.cpp  Logger.h
src/dengine/platform/input/: InputManager.cpp  InputManager.h  KeyCodes.h
src/dengine/renderer/: Renderer.cpp  Renderer.h
src/dengine/resources/: ManagedResource.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Shaper.cpp  Shaper.h
src/dengine/scene/: Scene.cpp  Scene.h  SceneRenderTarget.cpp  SceneRenderTarget.h  SelectStencil.cpp  SelectStencil.h
src/dengine/shader/: BoxBlurShader.cpp  BoxBlurShader.h  ColorShader.cpp  ColorShader.h  DepthShader.cpp  DepthShader.h  GridShader.cpp  GridShader.h  LayeredShadowMapDisplayShader.cpp  LayeredShadowMapDisplayShader.h  ObjectShader.cpp  ObjectShader.h  PSSMInstancingShader.cpp  PSSMInstancingShader.h  PSSMShader.cpp  PSSMShader.h  PhongShader.cpp  PhongShader.h  ScreenOverlayShader.cpp  ScreenOverlayShader.h  SelectionCompositeShader.cpp  SelectionCompositeShader.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  ShadowShader.cpp  ShadowShader.h  WBOITCompositeShader.cpp  WBOITCompositeShader.h  WorldShader.cpp  WorldShader.h
src/dengine/util/: BoundingBox.cpp  BoundingBox.h  Collisions.cpp  Collisions.h  Color.cpp  Color.h  DebugDraw.cpp  DebugDraw.h  GLUtils.cpp  GLUtils.h  GfxUtils.cpp  GfxUtils.h  HSLColor.h  Math.h  Profiling.h  Text.h
